update documentation