@@ -1,19 +1,21 @@
-## Getting Started
+## Student Roll Interface
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+This application is a demo demonstrating creating a student roll using the JavaFx library and was build using javaFx-sdk-22.0.12.
 
-## Folder Structure
+## Compiling program
 
-The workspace contains two folders by default, where:
+1. Ensure you have the JavaFx sdk library downloaded and take note of which directory it is stored.
+2. Open your computer terminal and navigate to the directory you wish to store the project
+3. Run `git clone git@github.com:itsnameissteven/csc372-mod8.git`
+4. Run `cd csc372-mod8/`
+5. Run `javac -d ./build/ --module-path {path/to/your/javaFx/lib} --add-modules javafx.controls,javafx.fxml src/student_roll/*.java`
+6. Run `cd build`
+7. Run `java --module-path {path/to/your/javaFx/lib} --add-modules javafx.controls,javafx.fxml student_roll.Main`
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+## Using the application
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+As a user, you can fill out a form to add students names, gpa and addresses. A menu bar is provided to save the student list to a text file.
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
+## Contributors
 
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
-# csc372-mod8
+- [Steven Mancine](https://github.com/itsnameissteven)
